grammar/Math.g4
/*
 *   Copyright 2020 Pianka Labs LLC (https://www.piankalabs.com)
 *
 *   Licensed under the Apache License, Version 2.0 (the "License");
 *   you may not use this file except in compliance with the License.
 *   You may obtain a copy of the License at
 *
 *       http://www.apache.org/licenses/LICENSE-2.0
 *
 *   Unless required by applicable law or agreed to in writing, software
 *   distributed under the License is distributed on an "AS IS" BASIS,
 *   WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 *   See the License for the specific language governing permissions and
 *   limitations under the License.
 */

// based on https://stackoverflow.com/questions/29971097/how-to-create-ast-with-antlr4/

grammar Math;

expression
    :   statement EOF
    ;

statement
    :   parenthetical                                               # parentheticalStatement
    |   unary                                                       # unaryStatement
    |   left = statement operator = ( '*' | '/' ) right=statement   # infixStatement
    |   left = statement operator = ( '+' | '-' ) right=statement   # infixStatement
    |   Number                                                      # numberStatement
    ;

parenthetical
    :   '(' statement ')'
    ;

unary
    :   operator = ( '+' | '-' ) statement
    ;

Operator_Add:       '+';
Operator_Subtract:  '-';
Operator_Multiply:  '*';
Operator_Divide:    '/';

Number
    :   [0-9]+ ('.' [0-9]+)?
    ;

Whiteosace
    :   [ \t\r\n] -> channel(HIDDEN)
    ;
